apps/bouvier/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deployment
  labels:
    app: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deployment
    spec:
      containers:
        - name: container-helper
          image: 'quay.io/openshift-examples/container-helper:ubi8-minimal'
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          volumeMounts:
          - name: cm-generator-yaml
            mountPath: /container-helper/
      volumes:
      - name: cm-generator-yaml
        configMap:
          name: cm-generator-yaml
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
