apps/bouvier/base/patty-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: patty
  name: patty-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: patty
