apps/bouvier/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: selma
  name: selma-service
  namespace: bouvier
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: selma
