apps/bouvier/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: patty
  name: patty-web
spec:
  to:
    kind: Service
    name: patty-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
