apps/bouvier/base/selma-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: selma
  name: selma-web
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: selma-service
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
